<resources>
    <string name="app_name">XFApplication</string>
    <string name="app_phone">请输入手机号码</string>
    <string name="app_code">请输入手机验证码</string>
    <string name="app_get_code">获取验证码</string>
    <string name="app_agree">我已阅读并同意</string>
    <string name="app_user">《用户协议》</string>
    <string name="app_fast_login">微信快捷登录</string>
    <string name="app_login">登录</string>
    <string name="app_head">兔子不吃草嘞</string>
    <string name="app_history_order">历史订单</string>
    <string name="app_you_code">优惠券</string>
    <string name="app_dui_code">兑换码</string>
    <string name="app_share">邀请好友享优惠</string>
    <string name="app_user_one">用户协议</string>
    <string name="app_setting">设置</string>

    <string name="base_shop_status_normal">正常营业</string>
    <!-- 首页 -->
    <string name="main_title">迅风智能洗车</string>
    <string name="app_main_order_btn">订单</string>
    <string name="app_main_user_btn">我的</string>
    <string name="app_main_scan_text">扫码洗车</string>
    <!-- scan -->
    <string name="scan_title">扫码洗车</string>

</resources>
