<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="6dp">

        <ImageView
            android:id="@+id/removeBankCardInfo"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@mipmap/xxxxxxxx" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="PingFang SC"
            android:gravity="center"
            android:lineHeight="24dp"
            android:text="登录"
            android:textColor="#161616"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/xunfeng" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="46dp"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:text="@string/app_phone"
            android:textColor="@color/colorPhone"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="11dp"
            android:layout_marginRight="45dp"
            android:src="@drawable/line" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:background="@null"
                android:layout_marginTop="5dp"
                android:inputType="textEmailAddress"
                android:text="@string/app_code"
                android:textColor="@color/colorPhone"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="46dp"
                android:layout_marginTop="11dp"
                android:layout_marginRight="45dp"
                android:src="@drawable/line" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGetCode"
            android:gravity="center"
            android:layout_marginRight="46dp"
            android:background="@drawable/login_shape"
            android:text="@string/app_get_code"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="69dp"
        android:layout_marginRight="69dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:text="登录"
            android:background="@drawable/option_feedback_three_shape"
            android:textColor="#ffffff"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="match_parent"
            android:text="微信快捷登录"
            android:layout_marginTop="50dp"
            android:background="@drawable/option_feedback_three_shape"
            android:textColor="#ffffff"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginLeft="69dp"
        android:layout_marginRight="110dp"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/app_agree"
            android:textSize="15sp"
            android:textColor="@color/colorAgree"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/app_user"
            android:layout_marginLeft="3dp"
            android:textSize="15sp"
            android:textColor="@color/colorUser"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>