<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_base_title_height"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textColor="@color/base_text"
            android:textSize="@dimen/app_base_title_text_size"
            />
    </RelativeLayout>

    <com.amap.api.maps2d.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/app_base_title_height"
        android:layout_marginBottom="@dimen/menu_mian_height"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_base_title_height">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/activity"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/login_index_btn"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="@dimen/menu_mian_height">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:src="@mipmap/order_menu_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/app_main_order_btn"
                android:textColor="@color/base_text"
                android:textSize="@dimen/menu_mian_text_size" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="match_parent">

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:src="@mipmap/user_menu_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/app_main_user_btn"
                android:textColor="@color/base_text"
                android:textSize="@dimen/menu_mian_text_size" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/main_scan_margin_bottom"
        android:gravity="center_horizontal">
        <RelativeLayout
            android:id="@+id/scan_btn"
            android:layout_width="140dp"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:background="@drawable/main_scan_bg">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/scan_index"
                android:layout_marginLeft="22dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_main_scan_text"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/main_scan_text_size"
                android:layout_marginLeft="55dp"
                />

        </RelativeLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="153dp"
        android:layout_marginRight="15dp"
        android:src="@mipmap/caller_index"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="15dp"
        android:src="@mipmap/location_index"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_tip_bg"
        android:visibility="gone"
        android:alpha="0.7">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/mian_tip1"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/app_base_title_height"
            android:src="@mipmap/main_tip2"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_dialog_height"
        android:visibility="gone"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/main_dialog_close"
                android:layout_marginRight="@dimen/main_dialog_close_right"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_dialog_content_height"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:background="@drawable/base_topradius_white_bg"
            android:paddingLeft="@dimen/main_dialog_close_right"
            android:paddingRight="@dimen/main_dialog_close_right"
            android:paddingTop="@dimen/main_dialog_padding_top"
            android:paddingBottom="@dimen/main_dialog_padding_top">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:maxWidth="300dp"
                    android:layout_height="wrap_content"
                    android:text="杭州富阳场口加油站杭州富阳场口加油站"
                    android:ellipsize="end"
                    android:textColor="@color/base_text"
                    android:singleLine="true"
                    android:textSize="@dimen/app_base_title_text_size"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:text="@string/base_shop_status_normal"
                    android:textColor="@color/base_normal"
                    android:textSize="@dimen/main_dialog_text_size" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:maxWidth="300dp"
                    android:layout_height="wrap_content"
                    android:text="杭州场口镇中心小学杭州场口镇中心小学杭州场口镇中心小学"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/base_text2"
                    android:textSize="@dimen/main_dialog_text_size"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="距您20km"
                    android:textColor="@color/base_text2"
                    android:layout_gravity="right|center_vertical"
                    android:textSize="@dimen/main_dialog_text_size"
                    />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                >
                <TextView
                    android:layout_width="84dp"
                    android:layout_height="28dp"
                    android:textColor="@color/colorWhite"
                    android:text="地图导航"
                    android:gravity="center"
                    android:background="@drawable/main_dialog_gps_bg"/>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/main_dialog_line">

            </LinearLayout>
            <com.xf.carwasher.view.RoundImageView
                android:id="@+id/dialog_shop_picture"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="225dp"
                android:src="@mipmap/car_wash"
                app:radius="20dp"
                android:scaleType="center"
                />

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>